--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,16 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-       <header>
-           <nav></nav>
-       </header>
-       <main>
-           <section></section>
-           <section></section>
-           <section></section>
-       </main>
-       <footer>
-       </footer>
+        <header>
+            <nav></nav>
+        </header>
+        <h1>Hello World</h1>
+        <main>
+            <h1></h1>
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
+        <footer></footer>
     </body>
 </html>
