--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
             <nav></nav>
         </header>
         <main>
-           <h1>Hello World</h1>
+           <h1>Hello Gorgeous</h1>
             <section></section>
             <section></section>
             <section></section>
