adding in all of the content

--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,55 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Learning CSS | Women Wine and Web Design</title>
+        <title>My Awesome Web Page</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <nav></nav>
+            <div>Joanna Hughes</div>
+            <nav>
+                <a href="/">Home</a>
+                <a href="/page-2.html">Page 2</a>
+                <a href="/page-3.html">Page 3</a>
+            </nav>
         </header>
         <main>
-           <h1>Hello Gorgeous</h1>
-            <section></section>
-            <section></section>
-            <section></section>
+             <section>
+                <h1>A little about myself</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </section>
+            <section>
+                <div>
+                    <img src="/app/images/" alt="">
+                    <h2>My current Occupation</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
+                </div>
+                <div>
+                    <img src="/app/images/" alt="">
+                    <h2>Why I want to learn code</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
+                </div>
+                <div>
+                    <img src="/app/images/" alt="">
+                    <h2>My Favorite Beverage</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
+                </div>
+            </section>
+            <section>
+                <di>
+                    <h3>Let's Connect!</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum lacinia quis vel eros donec. Ac tortor vitae purus faucibus ornare suspendisse.</p>
+                </di>
+                <di>
+                    <h3>Contact Information</h3>
+                    <ul>
+                        <li>Phone: <a href="tel:555-123-4567">555-123-4567</a></li>
+                        <li>Email: <a href="mailto:hughes.joannak@gmail.com">hughes.joannak@gmail.com</a></li>
+                        <li>Linkedin: <a href="https://www.linkedin.com/in/joannahughes/">View my resume</a></li>
+                    </ul>
+                </di>
+            </section>
         </main>
-        <footer></footer>
+        <footer>&copy;2018 Joanna Hughes | Women Wine &amp; More Web Design</footer>
     </body>
 </html>
