fixing broken tag

--- a/app/index.html
+++ b/app/index.html
@@ -38,18 +38,18 @@
                 </div>
             </section>
             <section>
-                <di>
+                <div>
                     <h3>Let's Connect!</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum lacinia quis vel eros donec. Ac tortor vitae purus faucibus ornare suspendisse.</p>
-                </di>
-                <di>
+                </div>
+                <div>
                     <h3>Contact Information</h3>
                     <ul>
                         <li>Phone: <a href="tel:555-123-4567">555-123-4567</a></li>
                         <li>Email: <a href="mailto:hughes.joannak@gmail.com">hughes.joannak@gmail.com</a></li>
                         <li>Linkedin: <a href="https://www.linkedin.com/in/joannahughes/">View my resume</a></li>
                     </ul>
-                </di>
+                </div>
             </section>
         </main>
         <footer>&copy;2018 Joanna Hughes | Women Wine &amp; More Web Design</footer>
