adding alt text

--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,17 @@
             </section>
             <section>
                 <div>
-                    <img src="/app/images/" alt="">
+                    <img src="/app/images/" alt="work">
                     <h2>My current Occupation</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
                 </div>
                 <div>
-                    <img src="/app/images/" alt="">
+                    <img src="/app/images/" alt="laptop">
                     <h2>Why I want to learn code</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
                 </div>
                 <div>
-                    <img src="/app/images/" alt="">
+                    <img src="/app/images/" alt="wine glass">
                     <h2>My Favorite Beverage</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
                 </div>
