adding width an height to icons

--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,17 @@
             </section>
             <section>
                 <div>
-                    <img src="images/briefcase.png" alt="work">
+                    <img src="images/briefcase.png" alt="work" width="200" height="200">
                     <h2>My current Occupation</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
                 </div>
                 <div>
-                    <img src="images/laptop.png" alt="laptop">
+                    <img src="images/laptop.png" alt="laptop" width="200" height="200">
                     <h2>Why I want to learn code</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
                 </div>
                 <div>
-                    <img src="images/wine.png" alt="wine glass">
+                    <img src="images/wine.png" alt="wine glass" width="200" height="200">
                     <h2>My Favorite Beverage</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
                 </div>
