spacing, text and link formatting

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>My Awesome Web Page</title>
+        <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,700" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -17,8 +18,10 @@
         </header>
         <main>
              <section>
-                <h1>A little about myself</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div>
+                    <h1>A little about myself</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </section>
             <section>
                 <div>
@@ -52,6 +55,6 @@
                 </div>
             </section>
         </main>
-        <footer>&copy;2018 Joanna Hughes | Women Wine &amp; More Web Design</footer>
+        <footer><p>&copy;2018 Joanna Hughes | Women Wine &amp; More Web Design</p></footer>
     </body>
 </html>
