--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div>Joanna Hughes</div>
+            <div class="logo">Joanna Hughes</div>
             <nav>
                 <a href="/">Home</a>
                 <a href="/page-2.html">Page 2</a>
@@ -23,19 +23,19 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </section>
-            <section>
+            <section class="icon-section">
                 <div>
-                    <img src="images/briefcase.png" alt="work" width="200" height="200">
+                    <img class="icon" src="images/briefcase.png" alt="work" width="200" height="200">
                     <h2>My current Occupation</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
                 </div>
                 <div>
-                    <img src="images/laptop.png" alt="laptop" width="200" height="200">
+                    <img class="icon" src="images/laptop.png" alt="laptop" width="200" height="200">
                     <h2>Why I want to learn code</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
                 </div>
                 <div>
-                    <img src="images/wine.png" alt="wine glass" width="200" height="200">
+                    <img class="icon" src="images/wine.png" alt="wine glass" width="200" height="200">
                     <h2>My Favorite Beverage</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
                 </div>
