styled desktop layout

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
                 </div>
             </section>
-            <section>
+            <section class="contact-section">
                 <div>
                     <h3>Let's Connect!</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum lacinia quis vel eros donec. Ac tortor vitae purus faucibus ornare suspendisse.</p>
