--- a/app/index.html
+++ b/app/index.html
@@ -1,60 +1,59 @@
 <!doctype HTML>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>My Awesome Web Page</title>
-        <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">Joanna Hughes</div>
-            <nav>
-                <a href="/">Home</a>
-                <a href="/page-2.html">Page 2</a>
-                <a href="/page-3.html">Page 3</a>
-            </nav>
-        </header>
-        <main>
-             <section>
-                <div>
-                    <h1>A little about myself</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-            </section>
-            <section class="icon-section">
-                <div>
-                    <img class="icon" src="images/briefcase.png" alt="work" width="200" height="200">
-                    <h2>My current Occupation</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
-                </div>
-                <div>
-                    <img class="icon" src="images/laptop.png" alt="laptop" width="200" height="200">
-                    <h2>Why I want to learn code</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
-                </div>
-                <div>
-                    <img class="icon" src="images/wine.png" alt="wine glass" width="200" height="200">
-                    <h2>My Favorite Beverage</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
-                </div>
-            </section>
-            <section class="contact-section">
-                <div>
-                    <h3>Let's Connect!</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum lacinia quis vel eros donec. Ac tortor vitae purus faucibus ornare suspendisse.</p>
-                </div>
-                <div>
-                    <h3>Contact Information</h3>
-                    <ul>
-                        <li>Phone: <a href="tel:555-123-4567">555-123-4567</a></li>
-                        <li>Email: <a href="mailto:hughes.joannak@gmail.com">hughes.joannak@gmail.com</a></li>
-                        <li>Linkedin: <a href="https://www.linkedin.com/in/joannahughes/">View my resume</a></li>
-                    </ul>
-                </div>
-            </section>
-        </main>
-        <footer><p>&copy;2018 Joanna Hughes | Women Wine &amp; More Web Design</p></footer>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Women Wine &amp; Web Banking</title>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="logo">Women, Wine &amp; Web Banking</div>
+      <nav>
+        <a href="index.html">Dashboard</a>
+        <a href="account.html">Account Information</a>
+        <a href="send.html">Send Money</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h1>Your money's in good hands.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Sed nisi lacus sed viverra tellus in hac habitasse platea. Ac felis donec et odio pellentesque diam volutpat commodo. Nam aliquam sem et tortor consequat id porta.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </section>
+      <section class="icon-section">
+        <div>
+          <img class="icon" src="images/briefcase.png" alt="work" width="200" height="200">
+          <h2>Business Needs</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna.</p>
+        </div>
+        <div>
+          <img class="icon" src="images/laptop.png" alt="laptop" width="200" height="200">
+          <h2>Online Banking</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque habitant morbi tristique senectus et netus et malesuada.</p>
+        </div>
+        <div>
+          <img class="icon" src="images/wine.png" alt="wine glass" width="200" height="200">
+          <h2>Wine & Money: A Story</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus viverra adipiscing at in tellus integer feugiat.</p>
+        </div>
+      </section>
+      <section class="contact-section">
+        <div>
+          <h3>Let's Connect!</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum lacinia quis vel eros donec. Ac tortor vitae purus faucibus ornare suspendisse.</p>
+        </div>
+        <div>
+          <h3>Contact Information</h3>
+          <ul>
+            <li>Phone: <a href="tel:555-123-4567">555-123-4567</a></li>
+            <li>Email: <a href="mailto:hughes.joannak@gmail.com">hughes.joannak@gmail.com</a></li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer><p>&copy;2018 Your Name Here | Women Wine &amp; More Web Design</p></footer>
+  </body>
 </html>
